# frappe-attachments-s3

./: LICENSE  pyproject.toml  requirements.txt
frappe_s3_attachment/: controller.py  hooks.py
frappe_s3_attachment/overrides/: file.py
