[project]
name = "frappe_s3_attachment"
description = "Connect AWS S3 with frappe"
requires-python = ">=3.10"
authors = [{name = "Mustakim", email = "mustakim@nonalifestyle.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version"]
dependencies = [
    # Core dependencies
    "boto3~=1.26.69",
    "botocore~=1.29.69",
    "python-magic~=0.4.27"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.black]
line-length = 99

[tool.isort]
line_length = 99
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
indent = "\t"